# US-Agentic-market-prediction-Swarm-agents

./: .gitignore  Dockerfile  GRAPH_PREDICTION_UPGRADE_PLAN.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_app.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
examples/: sample_market_data.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  HeroScene.jsx  styles.css  useBackendArtifact.js  useBrowserRoute.js
src/market_direction_dashboard/: __init__.py  agents.py  calendar.py  cli.py  config.py  dashboard.py  data.py  environment_builder.py  evaluation.py  feature_store.py  features.py  graph.py  live_features.py  llm_clients.py  modeling.py  models.py  pipeline.py  report_agent.py  reporting.py  scheduler.py  sector_scraper.py  simulation.py  simulation_reporting.py  simulation_runner.py  simulation_state.py  sources.py  statistical_engine.py  swarm_simulation.py  webapp.py
src/market_direction_dashboard/core/: __init__.py
src/market_direction_dashboard/data_sources/: __init__.py  historical_prices.py
src/market_direction_dashboard/domain/: __init__.py  adapters.py  models.py
src/market_direction_dashboard/extraction/: __init__.py  documents.py  entities.py  linking.py  pipeline.py  relationships.py  retrieval_preview.py
src/market_direction_dashboard/graph_store/: config.py  (+6 more)
tests/: test_graph_prediction_wave1.py  test_graph_prediction_wave3.py  test_pipeline.py  test_swarm_config.py  test_swarm_persona_builder.py  test_swarm_reporting.py  test_swarm_scaling.py
(+25 files in other folders)
