[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-direction-dashboard"
version = "0.1.0"
description = "Quant finance market direction probability dashboard generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "numpy>=2.0.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "plotly>=6.0.0",
  "scikit-learn>=1.5.0"
]

[project.scripts]
market-dashboard = "market_direction_dashboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
