[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-prediction"
version = "0.1.0"
description = "US agentic market prediction project driven by daily economic, political, social, and market research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arch>=7.0.0",
  "jinja2>=3.1.0",
  "neo4j>=5.28.0",
  "numpy>=2.0.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "plotly>=6.0.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "statsmodels>=0.14.0",
  "yfinance>=0.2.0"
]

[project.scripts]
market-prediction = "market_direction_dashboard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
